# Foxmath

./: CMakeLists.txt  README.md
3dOperation/: constants.h  logs.cpp  operation.cpp  operation.h  premute.cpp  transform.cpp  transform.h  trigonometric.cpp
Header/: FoxDef.h  FoxMat4.h  FoxVec3.h  FoxVec4.h  matrix4x4.h  vector3.h  vector4.h
Include/: FoxCpuCheck.hpp  FoxDef.h
Include/Math/: Constants.h  Functions.h  Transform.h
Include/Matrix/: FoxMat4x4.h
Include/Vector/: FoxVec3.h  FoxVec4.h
base/: FoxMath.h  basic_def.h  cpu_check.cpp  cpu_check.hpp  fox_avx.h  fox_mmx_float.h  fox_pure.h  fox_sse.h  fox_sse_double.h  vecBase.hpp
matrix/: matrix4x4.cpp  matrix4x4.h
test/: CMakeLists.txt  IsAVXAvailable.cxx  IsSSEAvailable.cxx  cpuSimdInstructionSupport.cxx  logsTest.cxx  mat4x4.cxx  testHeader.hpp  triFunctionTest.cxx  vector3.cxx  vector4.cxx
vector/: vector3.cpp  vector3.h  vector4.cpp  vector4.h
