cmake_minimum_required(VERSION 3.10)
project(FOXMATH CXX)
set (CMAKE_EXPORT_COMPILE_COMMANDS 1)
if(CMAKE_COMPILER_IS_GNUCXX)
    set(CMAKE_CXX_FLAGS "-std=c++17 -mavx2 ${CMAKE_CXX_FLAGS}")
    message("/:option -std=c++17")
    message("/:option -mavx2")
endif(CMAKE_COMPILER_IS_GNUCXX)
file(GLOB SRC_LIST   "base/*.h" "base/*.hpp" "base/*.cpp")
add_library(FOXMATH ${SRC_LIST})