cmake_minimum_required(VERSION 3.10)
project(FOXMATH_TEST)
include(CTest)
if("${CMAKE_CXX_COMPILER_ID}" MATCHES "Clang|GNU")
set(CMAKE_CXX_FLAGS "-g ${CMAKE_CXX_FLAGS}")
elseif("${CMAKE_CXX_COMPILER_ID}" MATCHES "MSVC")
    set(CMAKE_CXX_FLAGS " /DEBUG ${CMAKE_CXX_FLAGS}")
    else()
message(FATAL_ERROR "You are using a compiler not supported by FoxMath, you are using ${CMAKE_CXX_COMPILER_ID}")
endif("${CMAKE_CXX_COMPILER_ID}" MATCHES "Clang|GNU")

file(GLOB SRC_LIST_FOR_TEST "../base/*.cpp" "../src/*.hpp" "../src/*.h")
file(GLOB TEST_LIST "*.cpp" "*.cxx")
foreach(TEST_FILE IN LISTS TEST_LIST)
    get_filename_component(fileName ${TEST_FILE} NAME_WE)
    add_executable(${fileName} "${TEST_FILE}")
    target_link_libraries(${fileName} FoxMath)
    target_include_directories(${fileName} PUBLIC ../Include/)
    add_test("${fileName}_Test" ${fileName})
    message("Add test: ${fileName}_Test")
endforeach(TEST_FILE in LISTS TEST_LIST)
